# portable-mind

./: .pre-commit-config.yaml  pyproject.toml
portablemind/: __main__.py
