[tool.poetry]
name = "portablemind"
version = "0.1.0"
description = "A simple Streamlit project for calling OpenAI API"
authors = ["Jonathan Búcaro <hola@jonathanbucaro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.176"
openai = "^0.27.7"
streamlit = "^1.22.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
